* Updated the installation document for using JBoss and an Apache HTTPD server as reverse proxy * Fixed some last minute issues